[tool.poetry]
name = "pyfdd"
version = "0.9.0"
description = "Software for fitting 2D channelling data for lattice location"
authors = ["Eric Bosne <eric.bosne@cern.ch>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/edbosne/pyfdd"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
numpy = "*"
matplotlib = ">=3.3.0, !=3.4.*"
scipy = "*"
numdifftools = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
